# asi_forecasting_engine

./: .env.example  ASI_close_prices_last_15_years_2025-06-05.csv  ASI_close_prices_last_15_years_2025-12-05.csv  DEVELOPER_GUIDE.md  DRAWDOWN_DEPTH_DURATION_REPORT.md  Modle Guide.docx  Output.docx  SUMMARY_REPORT.md  analyze_drawdown_depth_duration.py  asi_analysis_summary.json  asi_predictor.py  asi_production_test_results.csv  combination_rankings.csv  comprehensive_analysis_results.json  comprehensive_downturn_analysis.py  data_fetching_test.py  drawdown_depth_duration_stats.json  drawdown_details.csv  evaluation_images.py  individual_model_results.json  investor_visuals.py  november_2025_predictions.csv  predict_november_2025.py  prod testing.csv  production_backtest.py  production_backtest_results.csv  pyproject.toml  requirements.txt  sarima.py  test_results.csv  train_downturn_predictor.py
Dushan/: asi_predictor.py  phase_3.py  phase_4.py
EDA/: EDA.ipynb
app/: cache.py  data_fetcher.py  database.py  log_database.py  log_models.py  logger.py  main.py  models.py  risk_engine.py  scheduler.py
arima/: arima_egarch_alert_engine.py  arima_grach_forecasting.py  arima_model_1.py  arima_model_2.py
asi_minus_five_models/: model_performance_summary.json  walk_forward_summary.json
deployment/: .env  predictions.py
enhanced_sarima_results/: enhanced_sarima_model.pkl  model_summary.json  sarima_price_forecasts.csv  validation_results.json
exported_datasets/: dataset_metadata.json  historical_downturns_complete.csv
minus_five_model/: minus_five_model.py
models/: gradient_boosting.pkl  gradient_boosting_results.json  lightgbm.pkl  (+8 more)
(+72 files in other folders)
