[tool.poetry]
name = "asi-prediction-api"
version = "0.1.0"
description = "ASI Prediction FastAPI service"
authors = ["Dushan Jalath"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Core FastAPI
fastapi = "0.104.1"
uvicorn = { version = "0.24.0", extras = ["standard"] }
pydantic = "2.11.7"
pydantic-settings = "2.9.1"

# Database
asyncpg = "0.31.0"
psycopg2-binary = "2.9.10"

# Machine Learning
xgboost = "3.0.2"
scikit-learn = "1.6.1"
joblib = "1.3.2"
pandas = "2.1.4"
numpy = "1.24.4"
scipy = "1.11.4"

# HTTP / API
aiohttp = "3.11.18"
httpx = "0.28.1"
requests = "2.31.0"

# Scheduling
apscheduler = "3.11.0"

# Date & time
python-dateutil = "2.9.0.0"
pytz = "2023.3"

# Logging
python-json-logger = "2.0.7"

# Environment
python-dotenv = "1.0.0"

# Multipart / CORS
python-multipart = "0.0.6"

# Visualization
plotly = "6.2.0"
matplotlib = "3.10.3"

# Caching / background tasks
redis = "6.1.0"
celery = "5.3.4"

# Security
passlib = { version = "1.7.4", extras = ["bcrypt"] }
python-jose = { version = "3.3.0", extras = ["cryptography"] }

# Notifications
emails = "0.6.0"

# Auth / Users
fastapi-users = "12.1.2"

# Git dependency
tvdatafeed = { git = "https://github.com/rongardF/tvdatafeed.git" }

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
black = "23.11.0"
flake8 = "6.1.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port $PORT"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
